2005-10-25  Kouhei Yanagita <yanagi@shakenbu.org>
	* style/rd+/rd2html.rb (a_name_href): fixed a escape string
	remaining bug (patch by Masao Mutoh).

2005-10-19  Kouhei Yanagita <yanagi@shakenbu.org>
	* hiki/repos/plain.rb, test/test_repos_plain.rb,
	misc/hikifarm/hikifarm.conf: add a new version control backend,
	which stores whole copy of each version.

2005-10-15  Kazuhiro NISHIYAMA <zn@mbf.nifty.com>
	* hiki/xmlrpc.rb: keyword bug fix.
	use XMLRPC::FaultException instead of rescue and false.
	support minoredit and md5hex. split XMLRPCHandler.

2005-10-03  Kouhei Yanagita <yanagi@shakenbu.org>
	* hiki/plugin.rb: use *_proc methods regardless of
	the value of @conf.use_plugin.

2005-10-02  Kazuhiko  <kazuhiko@fdiary.net>
	* style/default/hikidoc.rb: sync with hikidoc rev.33.
	  revise esacpes in parse_link
	  allow empty descriptions in definition lists
	* style/default/html_formatter.rb (replace_link): follow the
	change of hikidoc.rb.

2005-09-30  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/hiki_formatter.rb (apply_tdiary_theme): revise
	H2_RE (reported by NISHI Takao).

	* misc/plugin/attach.rb, misc/plugin/category.rb,
	misc/plugin/keyword.rb, misc/plugin/orphan.rb,
	misc/plugin/referer.rb, misc/plugin/sitemap.rb,
	misc/plugin/template.rb, plugin/00default.rb,
	style/default/html_formatter.rb: revise for more strict HTML (by
	KURODA Hiraku).

2005-09-29  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/webrick/hikilet.rb: add a script to run hiki with
	WEBrick (by Kazuhiro NISHIYAMA).

	* style/math/parser.rb, style/math/html_formatter.rb: follow the
	changes of the default style.

	* hiki/xmlrpc.rb: use utf-8 as the input/output charset.
	add 'wiki.getPageInfo'.

	* hiki/util.rb (redirect): always use 'meta refresh' (closes #26).

	* style/default/hikidoc.rb: sync with hikidoc rev.30.
	  allow empty descriptions in definition lists.

2005-09-27  Kazuhiko  <kazuhiko@fdiary.net>
	* style/default/hikidoc.rb: sync with hikidoc rev.29.
	  bugfix in parse_plugin.