@@ -1,10 +1,10 @@
-# $Id: config.rb,v 1.97 2005-10-25 02:51:48 yanagita Exp $
+# $Id: config.rb,v 1.98 2005-11-01 14:21:00 yanagita Exp $
 # Copyright (C) 2004-2005 Kazuhiko <kazuhiko@fdiary.net>
 #
 # TADA Tadashi <sho@spc.gr.jp> holds the copyright of Config class.
 
 HIKI_VERSION  = '0.8.4'
-HIKI_RELEASE_DATE = '2005-10-25'
+HIKI_RELEASE_DATE = '2005-11-01'
 
 require 'cgi'
 require 'hiki/command'
